[package]
name = "mm-help"
version = "0.1.0"
authors = ["gloat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "*", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "*", features = ["full"] }
